Вынес логику http-запросов в отдельный класс для методов connect и getSystemInfo