@@ -1,15 +1,21 @@
 package com.kts.ciscorc.data;
 
+import android.os.Build;
+import android.os.Handler;
 import android.util.Log;
+
+import androidx.annotation.RequiresApi;
 
 import javax.net.ssl.*;
 import javax.xml.bind.DatatypeConverter;
 import java.io.*;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.X509Certificate;
 import java.util.Base64;
+import java.util.stream.Collectors;
 
 public class ConnectionClass {
     public static String ipAddress;
@@ -54,79 +60,72 @@ public class ConnectionClass {
         String uri = null;
         //Логика подключения к терминалу, авторизация
         try {
-            uri = "https://" + ipaddress + "/getxml?location=/Status/SystemUnit";
+            uri = "http://" + ipaddress + "/getxml?location=/Status/SystemUnit";
             url = new URL(uri);
             String userCredentials = login + ":" + password;
 //            String basicAuth = "Basic " + new String(Base64.getEncoder().encode(userCredentials.getBytes()));  //Работает только с версии API 26
             String basicAuth = "Basic " + DatatypeConverter.printBase64Binary(userCredentials.getBytes());  //Работает со старыми версиями Java
-            HttpsURLConnection connection = (HttpsURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setRequestProperty("Content-Type", "text/xml");
-            connection.setReadTimeout(5000);
-            connection.setConnectTimeout(10000);
-            connection.setDoOutput(true);
-            connection.setDoInput(true);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestProperty("Authorization", basicAuth);
+            connection.setRequestMethod("GET");
+            connection.setReadTimeout(3000);
+            connection.setConnectTimeout(3000);
+            connection.connect();
 
             return connection.getResponseMessage();
 
         } catch (SocketTimeoutException e){
-            return "Видеотерминал не отвечает";
+            return e.toString() + "Запрос не авторизован";
         } catch (UnknownHostException e) {
-            return "Неизвестный хост";
+            return "UnknownHostException, Неизвестный хост";
         } catch (IOException e) {
-            return "Запрос не авторизован";
+            return "IOException, Запрос не авторизован";
         } catch(Exception e) {
             e.printStackTrace();
-            return "Неизвестная ошибка";
+            return e.toString() + "Видеотерминал не отвечает";
         }
 
     }
+
     public static String getSystemInfo(String ipaddress, String login, String password){
-
+        String uri = null;
         try {
-            url = new URL ("http://178.176.35.45:8084/status.xml");                                         //1-GET
-
-
-            String userCredentials = "operator:password";
-            String basicAuth = "Basic " + new String(Base64.getEncoder().encode(userCredentials.getBytes())); //Работает только с Java 8
-
-//            String encoded = DatatypeConverter.printBase64Binary(userCredentials.getBytes()); //Работает со старыми версиями Java
-//            String basicAuth = "Basic " + new String(encoded);                                //Работает со старыми версиями Java
-
+            uri = "http://" + ipaddress + "/getxml?location=/Status/SystemUnit";
+            url = new URL(uri);
+            String userCredentials = login + ":" + password;
+//            String basicAuth = "Basic " + new String(Base64.getEncoder().encode(userCredentials.getBytes()));  //Работает только с версии API 26
+            String basicAuth = "Basic " + DatatypeConverter.printBase64Binary(userCredentials.getBytes());  //Работает со старыми версиями Java
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");                                                                  //1-GET
-
-            connection.setReadTimeout(3000);
-            connection.setConnectTimeout(15000);
-            connection.setDoOutput(true);
-            connection.setDoInput(true);
             connection.setRequestProperty("Authorization", basicAuth);
+            connection.setRequestMethod("GET");
+            connection.setReadTimeout(3000);
+            connection.setConnectTimeout(3000);
+            connection.connect();
 
-            System.out.println("Внимание! Ответ сервера " + connection.getResponseMessage());
-
-
-            InputStream content = connection.getInputStream();                             // -> чтение из потока
-            BufferedReader in = new BufferedReader (new InputStreamReader (content));
+            BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+            String result = "";
             String line;
-            String resalt = null;
             while ((line = in.readLine()) != null) {
-                Log.d("INFO", line);
-                resalt += line;
+                result += line;
             }
-            return resalt;
+
+            return result;
+
 
         } catch (SocketTimeoutException e){
-            return "Видеотерминал не отвечает";
+            return "SocketTimeoutException, Видеотерминал не отвечает";
         } catch (UnknownHostException e) {
-            return "Неизвестный хост";
+            return "UnknownHostException, Неизвестный хост";
         } catch (IOException e) {
-            return "Запрос не авторизован";
+            return "IOException, Запрос не авторизован";
         } catch(Exception e) {
             e.printStackTrace();
-            return "Неизвестная ошибка";
+            return e.toString() + "Видеотерминал не отвечает";
         }
+
     }
+
+
 //    public static List<String> runDiagnostic(){
 //        //Запуск диагностики терминала, выдача результата
 //
